Moved self-validating type implementations into per-package schemas.